--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "enzyme": "^3.9.0",
     "react": "^16.8.4",
-    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.8",
@@ -30,5 +28,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2"
+  }
 }
